manifests/environments/at23/apps/service/ingress-hostname.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: service
spec:
  hostnames:
    - dialogporten.at23.dis-core.altinn.cloud
